terraform/internet-gateway.tf
resource "aws_internet_gateway" "eks_gateway" {
  vpc_id = aws_vpc.eks_vpc.id

  tags = {
    "Name" = "eks_gateway"
  }
}
